--- a/client/src/global.scss
+++ b/client/src/global.scss
@@ -31,3 +31,7 @@ body {
 td {
   font-size: 12px;
 }
+
+.table-responsive {
+  overflow: visible !important;
+}
